Change log for zeit.web
=======================

2.98 (unreleased)
-----------------

- ZON-3214: Restyle reisebox and bemify general partnerbox markup

- ZON-3227: Update to IContentQuery API to prepare for Retresco

- ZON-3212: Adapt ad place 7 width

- FIX: Tweak padding for infographic images

- FIX: Make xml.zeit.de routing work for author and link objects


2.97.4 (2016-08-11)
-------------------

- HOTFIX: Fix typo in VariantImage code

- BUG-490: delete special font settings for advertorial teaser

- BUG-419: Include iq-artikelanker only once on komplettansicht


2.97.3 (2016-08-11)
-------------------

- FIX: Determine ratio according to viewport for the "original" variant


2.97.2 (2016-08-11)
-------------------

- FIX: Apply display_mode settings to infographic images too

- FIX: Be defensive about resolving infoboxes on xml.zeit.de


2.97.1 (2016-08-10)
-------------------

- HOTFIX: Fix teaser images in playlist module


2.97 (2016-08-10)
-----------------

- HOTFIX: Set display_mode=large for article header images

- BUG-478: Show label on zco text-only advertorial teaser

- ZON-3099: Make xml.zeit.de routing work

- BUG-372: Track video page URL for video player events

- FIX: Small styling fixes to ZON-3221

- FIX: Do not show image on column nextread


2.96 (2016-08-08)
-----------------

- ZON-3171: Render different metadata for infographic-images

- ZON-3078: Enforce mobile image for first zett parquet teaser

- ZON-3099: Render xml.zeit.de

- ZON-3197: SSL version of framebuilder

- MAINT: Combine image fallback and fallback_expired into one condition


2.95 (2016-08-01)
-----------------

- HOTFIX: Preserve querystrings while redirecting videos

- BUG-469: Scale down ad place 1 and use iframe in AMPs

- BUG-476: Label ads in AMPs

- BUG-471: make iframes scroll on iOS

- ZON-1978: Hide regions, areas and modules

- ZON-3198: Remove jQuery from global scope and add slim variant for framebuilder
