@@ -3,9 +3,11 @@
 	{%- if view.comments.sort == 'asc' -%}
 		{%- set prev_label = 'Ältere Kommentare' -%}
 		{%- set next_label = 'Neuere Kommentare' -%}
+		{%- set keep_sort = None -%}
 	{%- else -%}
 		{%- set prev_label = 'Neuere Kommentare' -%}
 		{%- set next_label = 'Ältere Kommentare' -%}
+		{%- set keep_sort = view.comments.sort -%}
 	{%- endif -%}
 <div class="comment-section__item" data-ct-area="comment_pager">
 	<nav class="pager" aria-labelledby="comments-pagination-title" data-ct-row="1">
@@ -21,7 +23,7 @@
 				{%- if page == pages.current -%}
 					<span>{{ page }}</span>
 				{%- elif page -%}
-					<a href="{{ view.request | append_get_params(url=view.content_url, page=page, cid=None) }}#comments">{{ page }}</a>
+					<a href="{{ view.request | append_get_params(url=view.content_url, page=page, sort=keep_sort, cid=None) }}#comments">{{ page }}</a>
 				{%- else -%}
 					<span>…</span>
 				{%- endif -%}
